[gd_scene load_steps=9 format=2]

[ext_resource path="res://assests/others/LIVESletter/lives_letter_box.png" type="Texture" id=1]
[ext_resource path="res://font/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/lives_letter_box.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 2 )

[node name="lives_letter_box" type="Node2D"]
script = ExtResource( 3 )

[node name="lives_letter_box" type="Sprite" parent="."]
scale = Vector2( 0.413461, 0.471154 )
texture = ExtResource( 1 )

[node name="L_letter" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -61.0
margin_top = -12.0
margin_right = -45.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "X"
align = 1
valign = 1

[node name="I_letter" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -12.0
margin_right = -19.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "X"
align = 1
valign = 1

[node name="V_letter" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -12.0
margin_right = 9.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "X"
align = 1
valign = 1

[node name="E_letter" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -12.0
margin_right = 35.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "X"
align = 1
valign = 1

[node name="S_letter" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 47.0
margin_top = -12.0
margin_right = 62.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "X"
align = 1
valign = 1
